DP-1044	Code fix to title-overlay for secondary, DP-1049	build megapromo

--- a/c/cheetah-responsive.scss
+++ b/c/cheetah-responsive.scss
@@ -276,7 +276,24 @@ body { // Previously had body.ngm but the NGS video player
 						color:$color-nat-geo;  
 
 					}
-
+					
+					.button, .overlay .button {
+						
+						background-color: rgba(255,255,255,0.75);
+						border: 0;
+						color: #000;
+						display: inline-block;
+						font-family: $font-sans-serif;
+						font-weight: 700;
+						font-size: 1rem;
+						margin: 1rem;
+						padding: 1rem 2rem;
+						text-decoration: none;
+						text-transform: uppercase;
+						text-shadow: none;
+						
+					}
+					
 					.article_title {
 					
 						color: black;
@@ -1180,32 +1197,98 @@ body { // Previously had body.ngm but the NGS video player
 							
 						}
 						
+						/* Style a container with text over a croppable image. */
+						
+						.promo-issue {
+							
+							margin: $margin-media 0;
+							overflow: hidden;
+
+							
+							img {
+								
+								position: absolute;
+								top: 50%;
+								transform: translateY(-50%);
+								
+							}
+							
+							.overlay {
+								
+								display: block;
+								font-family: $font-sans-serif;
+								padding: $margin-media/2 0;
+								position: relative;
+								top: inherit;
+								transform: none;
+								z-index: 1000;
+								
+								a:hover {
+									
+									color: inherit;
+									
+								}
+	
+								@include respond-to-width(small) {
+									
+									color: #fff;
+									padding-bottom: 0;
+									text-align: center;
+															
+									h1, h2, h3, h4 {
+										
+										color: #fff;
+										text-align: center;
+										margin-left: auto;
+										margin-right: auto;
+										text-shadow: 0.2rem 0.2rem 0.5rem rgba(0,0,0,0.8);	
+
+									}
+									
+								}
+
+								h1 {
+					
+									font-family: $font-sans-serif;
+									font-size: 15vw;
+									letter-spacing: -0.04em;
+									line-height: 1.0em;
+									margin: 0 auto;
+									padding: 0;
+									
+									@include respond-to-width(small) {
+										
+										font-size: 5rem;
+										
+									}
+									
+								}
+								
+								h3 { 
+								
+									font-weight: 700;
+									font-size: 1.4rem;
+									margin: 1rem auto;
+									width: 90%;
+									max-width: 90%;
+									
+								}
+								
+							}
+							
+						}
+						
 						/* Style a container to show promos, optionally with thumbnails. */
 						
 						.promo-content {
 							
 							font-family: $font-sans-serif;
-							
-							h1 {
-								
-								font-size: 8rem;
-								line-height: 1.0em;
-								margin: 0 auto;
-								padding: 0;
-								
-								@include respond-to-width(small) {
-									
-									font-size: 5rem;
-									
-								}
-								
-
-							}
-							
 														    							
    							ul { 
 								
 								list-style-type: none;
+								margin: 0;
+								padding: 0;
 								
 							}
 							
@@ -1443,6 +1526,7 @@ body { // Previously had body.ngm but the NGS video player
 						
 						}
 						
+						
 						.video.overlay-container, .photo.overlay-container {
 							
 							margin-top: 0;
@@ -1454,7 +1538,6 @@ body { // Previously had body.ngm but the NGS video player
 							}
 							
 						}		
-
 
 					}
 					
@@ -1518,9 +1601,10 @@ body { // Previously had body.ngm but the NGS video player
 	 						
  							a {
 	 							
+	 							border-bottom: 1px solid;
 	 							color: #fff;
-	 							border: 0;
-	 							text-decoration: underline;
+	 							text-decoration: none;
+	 							
 	 							
  							}
  							
@@ -1620,24 +1704,30 @@ body { // Previously had body.ngm but the NGS video player
 				
 					}
 					
+					h1.title, .overlay > h1 {
+						
+						
+						
+					}
+					
 					h2 {
 						
 						line-height: 1.4;
 						
 					}
 					
-					h2.title {
+					h2.title, .overlay > h2 {
 						
 						font-family: $font-serif-deck-bold;
 						font-size: 4rem;
 						font-weight: 400;
 						line-height: 1.0em;
 						margin: 1rem auto;
-						max-width: 80%;
 						padding: 0;
 						text-align: center;
 						text-transform: normal;
-						width: $width-text-max;
+						
+						@extend .internal-function-width-column;
 						
 						@include respond-to-width(large) {
 
@@ -1645,33 +1735,44 @@ body { // Previously had body.ngm but the NGS video player
 
 						}
 						
+						@include respond-to-width(notsmall) {
+							
+							max-width: 80%;
+						
+						}
+						
 						@include respond-to-width(small) {
 							
 							font-size: 2.5rem;
-							width: $width-text-max;
-							max-width: 80%;
+							text-align: left;
 							
 						}
 						
 					}
 					
-					h3.title {
+					h3.title, .overlay > h3 {
 						
 						font-family: $font-sans-serif;
 						font-size: 1.2rem;
 						font-weight: 400;
 						line-height: 1.4;
 						margin: 0 auto;
-						max-width: 60%;
 						padding: 0;
 						text-align: center;
 						text-transform: none;
+						
+						@extend .internal-function-width-column;
 						width: $width-text-max;
+						
+						@include respond-to-width(notsmall) {
+							
+							max-width: 60%;
+						
+						}
 						
 						@include respond-to-width(small) {
 							
-							width: $width-text-max;
-							max-width: 80%;
+							text-align: left;
 							
 						}
 						
@@ -1690,17 +1791,33 @@ body { // Previously had body.ngm but the NGS video player
 						
 					}
 					
-					h4.title {
+					h4.title, .overlay > h4 {
 						
-						text-transform: uppercase;
 						font-family: $font-sans-serif;
-						font-size: 1em;
+						font-size: .9em;
 						font-weight: 300;
 						line-height: 1.2em;
 						margin: 3.5rem auto 0 auto;
 						text-align: center;
+						text-decoration: none;
+						text-transform: uppercase;
+						
+						@extend .internal-function-width-column;
 						width: $width-text-max;
-						max-width: 80%;
+						
+						@include respond-to-width(notsmall) {
+							
+							max-width: 80%;
+						
+						}
+
+						@include respond-to-width(small) {
+							
+							margin-top: 1.5rem;
+							text-align: left;
+							
+							
+						}
 
 					}
 					
